org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/Relationship_invalid_relatedElement0.sysml.xt
//*
XPECT_SETUP org.omg.sysml.xpect.tests.validation.invalid.SysMLTests
	ResourceSet {
		ThisFile {}
		File {from ="/library.kernel/Base.kerml"}
		File {from ="/library.kernel/Links.kerml"}
       	File {from ="/library.kernel/Occurrences.kerml"}
       	File {from ="/library.kernel/Objects.kerml"}
       	File {from ="/library.kernel/Performances.kerml"}
		File {from ="/library.kernel/BaseFunctions.kerml"}
		File {from ="/library.systems/Items.sysml"}
		File {from ="/library.systems/Parts.sysml"}
		File {from ="/library.systems/Ports.sysml"}
	}
	Workspace {
		JavaProject {
			SrcFolder {
				ThisFile {}
				File {from ="/library.kernel/Base.kerml"}
				File {from ="/library.kernel/Links.kerml"}
        		File {from ="/library.kernel/Occurrences.kerml"}
 		      	File {from ="/library.kernel/Objects.kerml"}
 		      	File {from ="/library.kernel/Performances.kerml"}
				File {from ="/library.kernel/BaseFunctions.kerml"}
				File {from ="/library.systems/Items.sysml"}
				File {from ="/library.systems/Parts.sysml"}
				File {from ="/library.systems/Ports.sysml"}
			}
		}
	}
END_SETUP 
*/
package BindingConnectorExample {
	part def B0;
	part def B1; 
	part def V;
	part v : V {
		// XPECT warnings ---> "Duplicate owned member name" at "b0"
		part b0 : B0 {
			port p0 {
				in ref myIn;
			}
		}
		part b1 : B1 {
			port p1 {
				out ref myOut;
			}
		}
		//* XPECT errors --- 
		"Relationships must have at least two related elements" at "bind b0.p0.myIn to"
		"mismatched input 'to' expecting '='" at "to"
		"no viable alternative at input '.'" at "."
		"no viable alternative at input '.'" at "."
		"no viable alternative at input 'b0'" at "b0"
		--- */
		// XPECT warnings ---> "Duplicate owned member name" at "b0"
		bind b0.p0.myIn to b0.p1.myOut;	
	} 
}